@@ -66,6 +66,7 @@ struct _FmTabPage
     FmSortMode sort_type;
     FmFolderModelCol sort_by;
     char **columns; /* NULL if own_config is FALSE */
+    char *filter_pattern;
 #else
     GtkSortType sort_type;
     int sort_by;
@@ -133,6 +134,10 @@ const char* fm_tab_page_get_status_text(FmTabPage* page, FmStatusTextType type);
 gboolean fm_tab_page_take_view_back(FmTabPage *page);
 gboolean fm_tab_page_set_passive_view(FmTabPage *page, FmFolderView *view, gboolean on_right);
 FmFolderView *fm_tab_page_get_passive_view(FmTabPage *page);
+
+#if FM_CHECK_VERSION(1, 0, 2)
+void fm_tab_page_set_filter_pattern(FmTabPage *page, const char *pattern);
+#endif
 
 G_END_DECLS
 
