@@ -180,6 +180,10 @@ Changes on 1.2.0 since 1.1.0:
     GtkTreeView - Ctrl+G for "find next" or "Shift+Ctrl+G for backward,
     scroll gestures also possible.
 
+* Added new menu option 'View'->'Filter...' which allows to apply shell
+    pattern to files currently shown in the view. The pattern is case
+    insensitive.
+
 
 Changes on 1.1.0 since 1.0.1:
 
